--- a/public/views/layouts/index.hbs
+++ b/public/views/layouts/index.hbs
@@ -21,6 +21,9 @@
     <form action="/api/login/logout" method="get">
     <input type="submit" value="Salir">
     </form>
+    <form action="/api/carrito" method="get">
+    <input type="submit" value="Carrito">
+    </form>
     
     {{{body}}}
 
