--- a/public/views/layouts/index.hbs
+++ b/public/views/layouts/index.hbs
@@ -24,7 +24,12 @@
     <form action="/api/carrito" method="get">
     <input type="submit" value="Carrito">
     </form>
-    
+    <form action="/api/orden/username" method="get">
+    <input type="submit" value="Ver ordenes de usuario">
+    </form>
+    <form action="/api/orden/find_by_number" method="get">
+    <input type="submit" value="buscar orden por numero">
+    </form>
     {{{body}}}
 
   </body>
