--- a/public/views/orden.hbs
+++ b/public/views/orden.hbs
@@ -1,5 +1,5 @@
 <h2>Orden Recibida</h2>
-<p>numero de orden: {{orden_numero}}</p>
+<p>numero de orden: {{order.orden_numero}}</p>
 
 <h4>usuario:  {{order.username}}</h4>
 <p>dirección:  {{order.direccion}}</p>
