--- a/public/views/chat.hbs
+++ b/public/views/chat.hbs
@@ -2,6 +2,6 @@
 <form class="chatContainer" onsubmit="return sendMessage()">
     <div id="chat">
   </div>
-    <input type="text" id="messageText" />
-    <input type="submit" value="Enviar" />
+    <input type="text" id="messageText"/>
+    <input type="submit" value="Enviar" class="botonEnviarChat" />
 </form>
