--- a/public/views/layouts/index.hbs
+++ b/public/views/layouts/index.hbs
@@ -11,27 +11,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"
     integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link rel="stylesheet" href="../../style.css">
 
+  <link rel="stylesheet" href="../../style.css">
   <title>{{titulo}}</title>
 </head>
 
 <body>
-  <form action="/api/login/logout" method="get">
-    <input type="submit" value="Salir">
-  </form>
-  <form action="/api/carrito" method="get">
-    <input type="submit" value="Carrito">
-  </form>
-  <form action="/api/orden/username" method="get">
-    <input type="submit" value="Ver ordenes de usuario">
-  </form>
-  <form action="/api/orden/find_by_number" method="get">
-    <input type="submit" value="buscar orden por numero">
-  </form>
-  <form action="/api/chat" method="get">
-    <input type="submit" value="Chat">
-  </form>
+  <div class="links_nav">
+    <a href="/api/login/logout">salir</a>
+    <a href="/api/productos">productos</a>
+    <a href="/api/carrito">Mi Carrito</a>
+    <a href="/api/orden/username"> ver mis compras</a>
+    <a href="/api/orden/find_by_number">ver mis compras por numero</a>
+    <a href="/api/chat">ayuda</a>
+  </div>
   {{{body}}}
 
 </body>
