--- a/public/views/orden.hbs
+++ b/public/views/orden.hbs
@@ -1,12 +1,18 @@
+{{#if existe}}
 <h2>Orden Recibida</h2>
-<p>numero de orden: {{order.orden_numero}}</p>
+<p class="datos_carritoOrden">numero de orden: {{order.orden_numero}}</p>
 
-<h4>usuario:  {{order.username}}</h4>
-<p>dirección:  {{order.direccion}}</p>
+<h4 class="datos_carritoOrden">usuario:  {{order.username}}</h4>
+<p class="datos_carritoOrden"> dirección:  {{order.direccion}}</p>
 <ul>
 {{#each order.items}}
-<li> <strong>{{this.nombre}}</strong>   Precio:${{this.precio}}   cantidad:{{this.cantidad}}  SUBTOTAL: ${{this.sub}}</li>
+<li class="items_carritoOrden"> <strong>{{this.nombre}}</strong>  <p>Precio:${{this.precio}}</p>  <p>cantidad:{{this.cantidad}}</p>  <strong>SUBTOTAL: ${{this.sub}}</strong> </li>
 {{/each}}
-<strong>TOTAL: $ {{order.total}}</strong>
+<strong class="total">TOTAL: $ {{order.total}}</strong>
 </ul>
+{{else}}
+<h4>La orden no existe</h4>
+{{/if}}
+<a href="/api/productos">seguir viendo</a>
+<a href="/api/login/logout">abandonar pagina</a>
 
