--- a/public/style.css
+++ b/public/style.css
@@ -12,10 +12,12 @@ input{
     justify-content: space-around;
 }
 
-.links_nav > a {
+a {
     text-decoration: none;
     border: solid black 1px;
     padding: 1px 2px;
+    color: black;
+    background-color: rgb(248, 244, 244);
 }
 
 .ulProducts{
@@ -56,6 +58,7 @@ form{
     flex-direction: column;
     justify-content:space-around;
     align-items: center;
+    margin-top: auto;
 }
 
 .datos_carritoOrden{
@@ -98,4 +101,8 @@ form{
 .botonEnviarChat{
     width: 5rem;
     height: 2rem;
+}
+
+div{
+    margin-top: 1rem;
 }
