--- a/public/views/chat.hbs
+++ b/public/views/chat.hbs
@@ -5,3 +5,5 @@
     <input type="text" id="messageText"/>
     <input type="submit" value="Enviar" class="botonEnviarChat" />
 </form>
+
+<a href="/api/chat/{{username}}">ver mi historial</a>
