--- a/public/views/layouts/index.hbs
+++ b/public/views/layouts/index.hbs
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="data:,">
   <script src="/socket.io/socket.io.js"></script>
-  <script src="../../main.js"></script>
+  <script src="/main.js"></script>
+  <script src="/adminLogica.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"
     integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <link rel="stylesheet" href="../../style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>{{titulo}}</title>
 </head>
 
@@ -26,5 +27,4 @@
     <a href="/api/chat">ayuda</a>
   </div>
   {{{body}}}
-
 </body>
