--- a/public/style.css
+++ b/public/style.css
@@ -81,13 +81,19 @@ form{
 
 .user{
     background-color: lightblue;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    height: max-content;
+    margin-top: 2px;
 }
 
 .admin{
     background-color: lightgreen;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    height: max-content;
+    margin-top: 2px;
 }
+
+
 .mensajes_display{
     display: flex;
     flex-direction: row;
@@ -105,4 +111,10 @@ form{
 
 div{
     margin-top: 1rem;
+}
+
+.form_agregarProducto{
+    display: flex;
+    flex-direction: row;
+    margin-left: 4rem;    
 }
