--- a/public/views/chatMensajes.hbs
+++ b/public/views/chatMensajes.hbs
@@ -1,6 +1,6 @@
 
 {{#each messagesList}}
-  <div class="{{this.autorizacion}}">
+  <div class="{{this.autorizacion}}  mensajes_Flex">
     <div class="mensajes_display">
       <p class="emailStyle">{{this.username}}</p>
       <p class="dateStyle">{{this.timestamp}}</p>
