--- a/public/views/error.hbs
+++ b/public/views/error.hbs
@@ -1,3 +1,7 @@
 <h1>Error:{{error}}</h1>
 
 <strong>{{mensaje}}</strong>
+
+<a href="/api/login">ingresar</a>
+
+<a href="/api/registro">registrarse</a>
