--- a/public/views/layouts/index.hbs
+++ b/public/views/layouts/index.hbs
@@ -19,13 +19,7 @@
 </head>
 
 <body>
-  <div class="links_nav">
-    <a href="/api/login/logout">salir</a>
-    <a href="/api/productos">productos</a>
-    <a href="/api/carrito">Mi Carrito</a>
-    <a href="/api/orden/username"> ver mis compras</a>
-    <a href="/api/orden/find_by_number">ver mis compras por numero</a>
-    <a href="/api/chat">ayuda</a>
-  </div>
+  {{> nav}}
+  
   {{{body}}}
 </body>
