--- a/public/views/productById.hbs
+++ b/public/views/productById.hbs
@@ -13,6 +13,6 @@
   <a href="/api/productos/">Seguir viendo</a>
 </div>
 {{else}}
-<strong>No hay productos</strong>
+<strong>No hay productos para ese filtro</strong>
 {{/if}}
 </form>
